--- a/webpage.css
+++ b/webpage.css
@@ -1,3 +1,4 @@
+/* title */
 h1
 {
     text-align: center;
@@ -5,7 +6,7 @@ h1
     
 }
 
-
+/* ready to begin ? */
 h3
 {
     text-align: center;
@@ -13,6 +14,7 @@ h3
     font-size: 30px;
 }
 
+/* rules */
 p
 {
     font-size: 20px;
