--- a/webpage.css
+++ b/webpage.css
@@ -42,11 +42,20 @@ p
     padding: 10px;
     background-color: wheat;
     font-size: 10px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 #backButton:hover
 {
     background-color: aquamarine
+}
+
+#options
+{
+    display: flex;
+    gap: 20px;
 }
 
 
@@ -58,4 +67,8 @@ body
 #gameScreen
 {
     display: none;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 100vh;
 }
